# preventable-deaths-netherlands-MODEL-dev

./: LICENSE  MAINTENANCE.md  Makefile  README.md  README_PC-OS.md  package-lock.json  package.json  pyproject.toml
app/: page.tsx
components/: campaign-section.tsx  circular-domains-analysis.tsx  data-analysis-section.tsx  definitions-section.tsx  individual-vs-state-analysis.tsx  ontology-section.tsx  review-section.tsx  statistics-section.tsx
scripts/: data_analysis.py
